--- a/EvaluacionProveedores/src/Frontera/EvaluarProveedor.form
+++ b/EvaluacionProveedores/src/Frontera/EvaluarProveedor.form
@@ -104,53 +104,50 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace max="-2" attributes="0"/>
+              <Group type="102" attributes="0">
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
-                          <Component id="jScrollPane1" pref="291" max="32767" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
-                      </Group>
-                      <Group type="102" attributes="0">
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="calidadProductosLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                              <Component id="fiabilidadEntregaLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                              <Component id="cercaniaGeograficaLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                              <Component id="AdaptabilidadLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                          </Group>
-                          <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="adaptabilidadSeleccion" min="-2" max="-2" attributes="0"/>
-                              <Component id="cercaniaGeograficaSeleccion" alignment="0" min="-2" max="-2" attributes="0"/>
-                              <Group type="102" alignment="0" attributes="0">
-                                  <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                                      <Component id="fiabilidadEntregaTextField" alignment="1" max="32767" attributes="1"/>
-                                      <Component id="calidadProductosTextField" alignment="1" pref="30" max="32767" attributes="1"/>
-                                  </Group>
+                              <Component id="jScrollPane1" alignment="0" pref="291" max="32767" attributes="0"/>
+                              <Group type="102" attributes="0">
                                   <Group type="103" groupAlignment="0" attributes="0">
+                                      <Component id="calidadProductosLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                                      <Component id="fiabilidadEntregaLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                                      <Component id="cercaniaGeograficaLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                                      <Component id="AdaptabilidadLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  </Group>
+                                  <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
+                                  <Group type="103" groupAlignment="0" attributes="0">
+                                      <Component id="adaptabilidadSeleccion" min="-2" max="-2" attributes="0"/>
+                                      <Component id="cercaniaGeograficaSeleccion" alignment="0" min="-2" max="-2" attributes="0"/>
                                       <Group type="102" alignment="0" attributes="0">
-                                          <EmptySpace max="-2" attributes="0"/>
-                                          <Component id="jLabel6" min="-2" max="-2" attributes="0"/>
-                                      </Group>
-                                      <Group type="102" alignment="1" attributes="0">
-                                          <EmptySpace max="-2" attributes="0"/>
-                                          <Component id="jLabel7" min="-2" max="-2" attributes="0"/>
+                                          <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                                              <Component id="fiabilidadEntregaTextField" alignment="1" max="32767" attributes="1"/>
+                                              <Component id="calidadProductosTextField" alignment="1" pref="30" max="32767" attributes="1"/>
+                                          </Group>
+                                          <Group type="103" groupAlignment="0" attributes="0">
+                                              <Group type="102" alignment="0" attributes="0">
+                                                  <EmptySpace max="-2" attributes="0"/>
+                                                  <Component id="jLabel6" min="-2" max="-2" attributes="0"/>
+                                              </Group>
+                                              <Group type="102" alignment="1" attributes="0">
+                                                  <EmptySpace max="-2" attributes="0"/>
+                                                  <Component id="jLabel7" min="-2" max="-2" attributes="0"/>
+                                              </Group>
+                                          </Group>
                                       </Group>
                                   </Group>
                               </Group>
+                              <Component id="comentariosLabel" alignment="0" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace pref="90" max="32767" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
-                          <Component id="comentariosLabel" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace pref="241" max="32767" attributes="0"/>
+                          <EmptySpace min="-2" pref="83" max="-2" attributes="0"/>
+                          <Component id="ingresarEvaluacionButton" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-              </Group>
-              <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace min="-2" pref="83" max="-2" attributes="0"/>
-                  <Component id="ingresarEvaluacionButton" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace pref="101" max="32767" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
