--- a/EvaluacionProveedores/src/Frontera/AdministrarProveedor.form
+++ b/EvaluacionProveedores/src/Frontera/AdministrarProveedor.form
@@ -381,7 +381,7 @@
                               <Component id="TFTelefonoCrear" alignment="0" pref="230" max="32767" attributes="0"/>
                               <Component id="TFCorreoCrear" alignment="0" pref="230" max="32767" attributes="0"/>
                               <Component id="TFPagWebCrear" alignment="0" pref="230" max="32767" attributes="0"/>
-                              <Component id="BtnProductosCerar" min="-2" pref="31" max="-2" attributes="0"/>
+                              <Component id="BtnProductosCrear" min="-2" pref="31" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace max="-2" attributes="0"/>
                       </Group>
@@ -408,7 +408,7 @@
                           <EmptySpace max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="1" attributes="0">
                               <Component id="lblProductoCrear" min="-2" max="-2" attributes="0"/>
-                              <Component id="BtnProductosCerar" min="-2" pref="19" max="-2" attributes="0"/>
+                              <Component id="BtnProductosCrear" min="-2" pref="19" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
@@ -490,9 +490,14 @@
                 </Component>
                 <Component class="javax.swing.JTextField" name="TFPagWebCrear">
                 </Component>
-                <Component class="javax.swing.JButton" name="BtnProductosCerar">
+                <Component class="javax.swing.JButton" name="BtnProductosCrear">
+                  <Properties>
+                    <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                      <Image iconType="3" name="/Frontera/lupa.png"/>
+                    </Property>
+                  </Properties>
                   <Events>
-                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BtnProductosCerarActionPerformed"/>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BtnProductosCrearActionPerformed"/>
                   </Events>
                 </Component>
               </SubComponents>
@@ -767,6 +772,11 @@
                 <Component class="javax.swing.JTextField" name="TFPagWebModificar">
                 </Component>
                 <Component class="javax.swing.JButton" name="BtnProductosModificar">
+                  <Properties>
+                    <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                      <Image iconType="3" name="/Frontera/lupa.png"/>
+                    </Property>
+                  </Properties>
                   <Events>
                     <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BtnProductosModificarActionPerformed"/>
                   </Events>
