Correccion Excepciones evaluarProveedor

--- a/EvaluacionProveedores/src/Frontera/EvaluarProveedor.form
+++ b/EvaluacionProveedores/src/Frontera/EvaluarProveedor.form
@@ -81,7 +81,7 @@
         <Property name="text" type="java.lang.String" value="NIT proveedor"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="nitProveedorTextFieldActionPerformed"/>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="nitProveedorTextFieldMouseClicked"/>
       </Events>
     </Component>
     <Component class="javax.swing.JButton" name="Buscar">
