--- a/EvaluacionProveedores/src/Frontera/EvaluarProveedor.form
+++ b/EvaluacionProveedores/src/Frontera/EvaluarProveedor.form
@@ -225,12 +225,13 @@
         <Component class="javax.swing.JComboBox" name="cercaniaGeograficaSeleccion">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="5">
-                <StringItem index="0" value="Bogot&#xe1;"/>
-                <StringItem index="1" value="..."/>
+              <StringArray count="6">
+                <StringItem index="0" value="Seleccionar"/>
+                <StringItem index="1" value="Bogot&#xe1;"/>
                 <StringItem index="2" value="..."/>
                 <StringItem index="3" value="..."/>
-                <StringItem index="4" value=" "/>
+                <StringItem index="4" value="..."/>
+                <StringItem index="5" value=""/>
               </StringArray>
             </Property>
           </Properties>
